tests/models/struct/unnamed/unit/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    ()
);
fn main() {}
