tests/models/struct/unnamed/unit/fail/default.stderr
error: Support default condition is only `null`
 --> tests/models/struct/unnamed/unit/fail/default.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
